welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:4: error: not found: value n
  for (i<-1 to n){
               ^